--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^8.0.6",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.2",
+    "remark-gfm": "^3.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
